--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
-AMADEUS_API_KEY=your_amadeus_api_key_here
-AMADEUS_API_SECRET=your_amadeus_api_secret_here
+APP_SECRET_KEY=
+AMADEUS_API_KEY=
+AMADEUS_API_SECRET=
 SKYSCANNER_API_KEY=your_skyscanner_api_key_here
